k8s/deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/k8s-test-300506/hellok8s:1.1
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 3000
